5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1633_2947.log
== TEST (2019-04-02 18:08:25) 
-- CODE:
from math import*
lado b= sqrt

	
bc= radians(float(input("angulo entre b e c: ")))
-- ERROR:
File "XXXX", line 2
    lado b= sqrt
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:30) 
-- CODE:
from math import*
ladob= sqrt cos(ladob)
 

ladoc= sqrt cos(ladoc)

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.191275
-- ERROR:
  File "/home/codebench/codes/1633/2947/main.py", line 2
    ladob= sqrt cos(ladob)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:33) 
-- CODE:
from math import*
ladob= sqrt cos(ladob)
 

ladoc= sqrt cos(ladoc)

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.144055
-- ERROR:
  File "/home/codebench/codes/1633/2947/main.py", line 2
    ladob= sqrt cos(ladob)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:35) 
-- CODE:
from math import*
ladob= sqrt cos(ladob)
 

ladoc= sqrt cos(ladoc)

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- ERROR:
File "XXXX", line 2
    ladob= sqrt cos(ladob)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:43) 
-- CODE:
from math import*
ladob= sqrt cos(ladob)
 

ladoc= sqrt cos(ladoc)

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- ERROR:
File "XXXX", line 2
    ladob= sqrt cos(ladob)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:30:03) 
-- CODE:
from math import*
b= float(input("valor do lado b"))
ladob: sqrt cos (b)
c=float(input("valor do lado c"))
ladoc= sqrt cos (c)

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- ERROR:
File "XXXX", line 3
    ladob: sqrt cos (b)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:41) 
-- CODE:
from math import*
b= float(input("valor do lado b"))
c=float(input("valor do lado c"))

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(ladob, 2))
NameError: name 'ladob' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:59) 
-- CODE:
from math import*
b= float(input("valor do lado b"))
c=float(input("valor do lado c"))

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(b, 2))
print(round(c, 2))
print(round(bc, 2))
-- OUTPUT:
8.0
10.0
1.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:34:02) 
-- CODE:
from math import*
b= float(input("valor do lado b"))
c=float(input("valor do lado c"))

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(b, 2))
print(round(c, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.198756
-- TEST CASE 1:
---- input:
8
10
60
---- correct output:
9.17
---- user output:
8.0
10.0
1.05
-- TEST CASE 2:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
18.8
21.9
0.86
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:38:34) 
-- CODE:
from math import*
b= float(input("valor do lado b"))
ladob= sqrt cos(b)
c=float(input("valor do lado c"))
ladoc= sqrt cos(c)

	
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- ERROR:
File "XXXX", line 3
    ladob= sqrt cos(b)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:50) 
-- CODE:

b= float(input("valor do lado b"))
from math import*

ladob= sqrt* cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt* cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ladob= sqrt* cos(b)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:39:54) 
-- CODE:

b= float(input("valor do lado b"))
from math import*

ladob= sqrt* cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt* cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.208514
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2947/main.py", line 5, in <module>
    ladob= sqrt* cos(b)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:39:56) 
-- CODE:

b= float(input("valor do lado b"))
from math import*

ladob= sqrt* cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt* cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.205831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2947/main.py", line 5, in <module>
    ladob= sqrt* cos(b)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:19) 
-- CODE:

b= float(input("valor do lado b"))
from math import*

ladob= sqrt radians(cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt radians(cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.110611
-- ERROR:
  File "/home/codebench/codes/1633/2947/main.py", line 5
    ladob= sqrt radians(cos(b)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:00) 
-- CODE:

b= float(input("valor do lado b"))
from math import*

ladob= sqrt radians(cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt radians(cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.152386
-- ERROR:
  File "/home/codebench/codes/1633/2947/main.py", line 5
    ladob= sqrt radians(cos(b)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:14) 
-- CODE:

b= float(input("valor do lado b"))
from math import*

ladob= sqrt radians(cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt radians(cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.194842
-- ERROR:
  File "/home/codebench/codes/1633/2947/main.py", line 5
    ladob= sqrt radians(cos(b)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:49) 
-- CODE:

b= float(input("valor do lado b"))
from math import*

ladob= sqrt radians(cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt radians(cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.148415
-- ERROR:
  File "/home/codebench/codes/1633/2947/main.py", line 5
    ladob= sqrt radians(cos(b)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:11) 
-- CODE:

b= float(input("valor do lado b"))
from math import*

ladob= sqrt radians(cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt radians(cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- EXECUTION TIME:
0.119907
-- ERROR:
  File "/home/codebench/codes/1633/2947/main.py", line 5
    ladob= sqrt radians(cos(b)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:49:33) 
-- CODE:
b= float(input("valor do lado b"))
from math import*

ladob= sqrt radians(cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt radians(cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- ERROR:
File "XXXX", line 4
    ladob= sqrt radians(cos(b)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:52:24) 
-- CODE:
b= float(input("valor do lado b"))
from math import*

ladob= sqrt radians(cos(b)

c=float(input("valor do lado c"))
from math import*
ladoc= sqrt radians(cos(c)
from math import*
bc= radians(float(input("angulo entre b e c: ")))


print(round(ladob, 2))
print(round(ladoc, 2))
print(round(bc, 2))
-- ERROR:
File "XXXX", line 4
    ladob= sqrt radians(cos(b)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
